--- a/expcrud/package.json
+++ b/expcrud/package.json
@@ -4,7 +4,8 @@
   "description": "Project on CRUD Operations",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "Aishwarya Waghmare",
   "license": "ISC",
